* Mon Mar 21 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.0~dev  

* Mon Mar 21 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 2.96
  Bumped maximum channel count to 32 to accommodate GPS+GLONASS devices.
  API version bumped to 5, redesign finished (changes are documented
  in the Client HOWTO). cgps now handles resize signals. Code can now
  link with uClibc for embedded use.  Various bugs in the C++ binding
  have been fixed. gpxlogger can now daemonize and write to a specified
  log file. A gpsd client can now set any locale it likes, and JSON
  will still be parsed using the C locale matching the daemon's.  Clients
  are no longer required to define a gpsd_report() hook. gpsd no longer
  emits probe strings to unidentified USB devices at startup. 
  JSON timestamps in TPV and SKY are now ISO8601 rather than seconds since
  the Unix epoch; the library handles the older style backward-compatibly. 
  GPGST sentences are now parsed for noise statistics when a device emits them.
  AIS and RTCM2 JSON dumps have device fields. JSON reports now include 50bps
  subframe data if the device allows access to it. gpsdecode can now dump NMEA
  GPS binary, and subframe data to JSON. The RTCM2 code now understands and 
  analyzes RTCM2.3 messages 13, 14, and 31, and has been checked against another
  analyzer.  The ancient Sager dump format for RTCM2 is abolished in favor of
  a JSON profile.

* Tue Jul 13 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.95
  The autonomous robot submarine total world domination release!
  Rationalize clearing and generation of DOPs, this makes epx/epy much
  more generally available. Fixed the test productions for the udev
  magic and added a troubleshooting note in INSTALL. cgps now displays
  epx/epy rather than eph. Speed is now always reported if our last
  two fixes were good, even if the GPS didn't compute it.  Reading
  packets from UDP datagrams by specifying a listening address and