@@ -1124,7 +1124,7 @@ static void handle_request(struct subscriber_t *sub,
 		if ((devp->observed & GPS_TYPEMASK) != 0)
 		    active++;
 	(void)snprintf(reply, replylen,
-		       "{\"class\":\"POLL\",\"time\":\"%s\",\"active\":%d,\"fixes\":[",
+		       "{\"class\":\"POLL\",\"time\":\"%s\",\"active\":%d,\"tpv\":[",
 		       unix_to_iso8601(timestamp(), tbuf, sizeof(tbuf)), active);
 	for (devp = devices; devp < devices + MAXDEVICES; devp++) {
 	    if (allocated_device(devp) && subscribed(sub, devp)) {
@@ -1153,7 +1153,7 @@ static void handle_request(struct subscriber_t *sub,
 	}
 	if (reply[strlen(reply) - 1] == ',')
 	    reply[strlen(reply) - 1] = '\0';	/* trim trailing comma */
-	(void)strlcat(reply, "],\"skyviews\":[", replylen);
+	(void)strlcat(reply, "],\"sky\":[", replylen);
 	for (devp = devices; devp < devices + MAXDEVICES; devp++) {
 	    if (allocated_device(devp) && subscribed(sub, devp)) {
 		if ((devp->observed & GPS_TYPEMASK) != 0) {
