@@ -19,6 +19,7 @@ typedef unsigned int speed_t;
  * 3.2: Added POLL command and response
  * 3.3: AIS app_id split into DAC and FID
  * 3.4: Timestamps change from seconds since Unix epoch to ISO8601.
+ * 3.5: POLL subobject name changes: fixes -> tpv, skyview -> sky.
  */
 #define GPSD_PROTO_MAJOR_VERSION	3	/* bump on incompatible changes */
 #define GPSD_PROTO_MINOR_VERSION	4	/* bump on compatible changes */
