@@ -1364,21 +1364,21 @@ will be reported with a mode field of zero.</para>
 
 <programlisting>
 {"class":"POLL","time":"2010-06-04T10:31:00.28Z","active":1,
-    "fixes":[{"class":"TPV","tag":"MID41","device":"/dev/ttyUSB0",
-              "time":"2010-09-08T13:33:06.09Z",
-	      "ept":0.005,"lat":40.035093060,
-              "lon":-75.519748733,"track":99.4319,"speed":0.123,"mode":2}],
-    "skyviews":[{"class":"SKY","tag":"MID41","device":"/dev/ttyUSB0",
-                 "time":1270517264.240,"hdop":9.20,
-                 "satellites":[{"PRN":16,"el":55,"az":42,"ss":36,"used":true},
-                               {"PRN":19,"el":25,"az":177,"ss":0,"used":false},
-                               {"PRN":7,"el":13,"az":295,"ss":0,"used":false},
-                               {"PRN":6,"el":56,"az":135,"ss":32,"used":true},
-                               {"PRN":13,"el":47,"az":304,"ss":0,"used":false},
-                               {"PRN":23,"el":66,"az":259,"ss":0,"used":false},
-                               {"PRN":20,"el":7,"az":226,"ss":0,"used":false},
-                               {"PRN":3,"el":52,"az":163,"ss":32,"used":true},
-                               {"PRN":31,"el":16,"az":102,"ss":0,"used":false}
+    "tpv":[{"class":"TPV","tag":"MID41","device":"/dev/ttyUSB0",
+            "time":"2010-09-08T13:33:06.09Z",
+	    "ept":0.005,"lat":40.035093060,
+            "lon":-75.519748733,"track":99.4319,"speed":0.123,"mode":2}],
+    "sky":[{"class":"SKY","tag":"MID41","device":"/dev/ttyUSB0",
+            "time":1270517264.240,"hdop":9.20,
+            "satellites":[{"PRN":16,"el":55,"az":42,"ss":36,"used":true},
+                          {"PRN":19,"el":25,"az":177,"ss":0,"used":false},
+                          {"PRN":7,"el":13,"az":295,"ss":0,"used":false},
+                          {"PRN":6,"el":56,"az":135,"ss":32,"used":true},
+                          {"PRN":13,"el":47,"az":304,"ss":0,"used":false},
+                          {"PRN":23,"el":66,"az":259,"ss":0,"used":false},
+                          {"PRN":20,"el":7,"az":226,"ss":0,"used":false},
+                          {"PRN":3,"el":52,"az":163,"ss":32,"used":true},
+                          {"PRN":31,"el":16,"az":102,"ss":0,"used":false}
 ]}]}
 </programlisting>
 
