@@ -1,4 +1,5 @@
 * Mon Mar 21 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.0~dev  
+  POLL subobject name changes: fixes -> tpv, skyview -> sky.
 
 * Mon Mar 21 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 2.96
   Bumped maximum channel count to 32 to accommodate GPS+GLONASS devices.
